[gd_scene load_steps=36 format=3 uid="uid://dt7qj4rvpib2x"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_3uef2"]
[ext_resource type="Script" path="res://resource/player_item/r_player_item.gd" id="2_3y3k3"]
[ext_resource type="PackedScene" uid="uid://csckx1dqx0ycd" path="res://ui/Player/canvas_ui.tscn" id="2_a8erp"]
[ext_resource type="PackedScene" uid="uid://cxhk4dhtfnyd2" path="res://Scenes/building/s_building_kennel.tscn" id="2_h7s7r"]
[ext_resource type="PackedScene" uid="uid://bevpsyqkjk42j" path="res://Scenes/building/s_building_barn.tscn" id="3_is48d"]
[ext_resource type="Resource" uid="uid://duicd6euu8gog" path="res://resource/player_item/r_player_item_shovel.tres" id="3_o6bft"]
[ext_resource type="Shader" path="res://shader/sh_underwater.gdshader" id="3_p7qtg"]
[ext_resource type="PackedScene" uid="uid://bjb44n5mpbmhk" path="res://Scenes/building/s_building_den.tscn" id="4_fw0ig"]
[ext_resource type="Script" path="res://ui/GameOver/canvas_game_over.gd" id="4_hbng8"]
[ext_resource type="Resource" uid="uid://chodsjx5dgmd3" path="res://resource/player_item/r_player_item_axe.tres" id="4_kuysq"]
[ext_resource type="Shader" path="res://shader/sh_raindroplets.gdshader" id="5_k63o8"]
[ext_resource type="Resource" uid="uid://5f1dwixey4cs" path="res://resource/player_item/r_player_item_pickaxe.tres" id="5_rhuhf"]
[ext_resource type="Script" path="res://shader/panel_raindroplets_on_screen.gd" id="6_0dylw"]
[ext_resource type="Shader" path="res://shader/sh_rainfall.gdshader" id="6_sfwvs"]
[ext_resource type="Resource" uid="uid://grough0htbca" path="res://resource/player_item/r_player_item_fruit.tres" id="6_tk1vk"]
[ext_resource type="Resource" uid="uid://7gh6nefpn4aw" path="res://resource/player_item/r_player_item_hay.tres" id="7_lwm4m"]
[ext_resource type="Script" path="res://shader/panel_rain_falling.gd" id="8_pgqh7"]
[ext_resource type="Theme" uid="uid://dbmay2mk5b3eg" path="res://theme/theme_base.tres" id="9_b3dlc"]
[ext_resource type="Script" path="res://Scenes/Player/object_selector.gd" id="11_i7gf1"]
[ext_resource type="Resource" uid="uid://k1f5jqcog0cj" path="res://resource/player_item/r_player_item_meat.tres" id="11_ybfx4"]
[ext_resource type="Texture2D" uid="uid://bqfrdf4prxo2s" path="res://resource/player_item_icon/icon_star.png" id="20_xhabl"]
[ext_resource type="Script" path="res://Scenes/Player/Weather_audio_stream_player_2d.gd" id="22_0hdt2"]
[ext_resource type="AudioStream" uid="uid://coff6xq32k4tw" path="res://sound/music/song_0_TownTheme.mp3" id="22_g8mg5"]
[ext_resource type="Script" path="res://Scenes/Player/audio_stream_player_rain.gd" id="24_6tn8h"]
[ext_resource type="AudioStream" uid="uid://bufgjwy2e5des" path="res://sound/fx/rain/chirping_birds.mp3" id="24_ot148"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cet7n"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v0pce"]
albedo_color = Color(0.278431, 1, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ji1vj"]
material = SubResource("StandardMaterial3D_v0pce")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sftpr"]
shader = ExtResource("5_k63o8")
shader_parameter/frequency = 4.0
shader_parameter/size = 0.005

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ac3pq"]
shader = ExtResource("6_sfwvs")
shader_parameter/count = 0
shader_parameter/slant = -0.01
shader_parameter/speed = 50.0
shader_parameter/blur = 0.0055
shader_parameter/colour = Color(1, 1, 1, 1)
shader_parameter/size = Vector2(0.01, 0.3)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8dt5m"]
render_priority = 0
shader = ExtResource("3_p7qtg")
shader_parameter/tint = Color(0.443137, 0.458824, 0.8, 1)
shader_parameter/wave_speed = 3.0
shader_parameter/wave_freq = 10.0
shader_parameter/wave_width = 1.0
shader_parameter/blur = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_tqih0"]
material = SubResource("ShaderMaterial_8dt5m")
orientation = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_tmenv"]

[sub_resource type="Animation" id="Animation_k48xp"]
resource_name = "swing"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.523599, 0, 0), Vector3(0.523599, 0, 0), Vector3(-0.523599, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dm0bs"]
_data = {
"swing": SubResource("Animation_k48xp")
}

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_layer = 21
script = ExtResource("1_3uef2")
wood_buildings = Array[PackedScene]([ExtResource("2_h7s7r"), ExtResource("3_is48d"), ExtResource("4_fw0ig")])
player_item_options = Array[ExtResource("2_3y3k3")]([ExtResource("4_kuysq"), ExtResource("3_o6bft"), ExtResource("5_rhuhf"), ExtResource("6_tk1vk"), ExtResource("7_lwm4m"), ExtResource("11_ybfx4")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00156459)
shape = SubResource("CapsuleShape3D_cet7n")

[node name="bodyMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_ji1vj")

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00151587, 0.671016, -0.557144)

[node name="Canvas_RainEffects" type="CanvasLayer" parent="Camera3D"]

[node name="Panel_Raindroplets_On_Screen" type="Panel" parent="Camera3D/Canvas_RainEffects"]
material = SubResource("ShaderMaterial_sftpr")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_0dylw")

[node name="Panel_Rain_Falling" type="Panel" parent="Camera3D/Canvas_RainEffects"]
material = SubResource("ShaderMaterial_ac3pq")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -489.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("8_pgqh7")

[node name="CanvasUI" parent="Camera3D" instance=ExtResource("2_a8erp")]

[node name="Gear" type="Node3D" parent="Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, -0.00151587, -0.786331, 0.243112)

[node name="UnderwaterView" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.239507)
visible = false
mesh = SubResource("PlaneMesh_tqih0")

[node name="Canvas_GameOver" type="CanvasLayer" parent="Camera3D/UnderwaterView"]
layer = 10
visible = false
script = ExtResource("4_hbng8")

[node name="VBoxContainer" type="VBoxContainer" parent="Camera3D/UnderwaterView/Canvas_GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -68.0
offset_right = 85.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_b3dlc")

[node name="Label" type="Label" parent="Camera3D/UnderwaterView/Canvas_GameOver/VBoxContainer"]
layout_mode = 2
text = "You Have Drowned."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Camera3D/UnderwaterView/Canvas_GameOver/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="Camera3D/UnderwaterView/Canvas_GameOver/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("20_xhabl")
expand_mode = 1
stretch_mode = 5

[node name="Label_stars_Earned" type="Label" parent="Camera3D/UnderwaterView/Canvas_GameOver/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "40"

[node name="Button_Continue" type="Button" parent="Camera3D/UnderwaterView/Canvas_GameOver/VBoxContainer" groups=["Button"]]
layout_mode = 2
size_flags_vertical = 10
text = "Continue"

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00441504, 0.00311828, 0.575537)
target_position = Vector3(0, 0, -3)
debug_shape_custom_color = Color(0.701961, 0, 0, 1)
debug_shape_thickness = 3

[node name="ObjectSelector" type="Area3D" parent="Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.745216)
collision_layer = 0
collision_mask = 42
script = ExtResource("11_i7gf1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/ObjectSelector"]
shape = SubResource("BoxShape3D_tmenv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Camera3D/Gear")
libraries = {
"": SubResource("AnimationLibrary_dm0bs")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_g8mg5")
autoplay = true
bus = &"Music"
script = ExtResource("22_0hdt2")

[node name="AudioStreamPlayer_rain" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_ot148")
volume_db = -4.0
autoplay = true
bus = &"Environment"
script = ExtResource("24_6tn8h")

[connection signal="pressed" from="Camera3D/UnderwaterView/Canvas_GameOver/VBoxContainer/Button_Continue" to="Camera3D/UnderwaterView/Canvas_GameOver" method="_on_button_continue_pressed"]
